🔧 Fixed invalid url

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <a class="icons" href="https://github.com/zxvnme">
                         <img onmouseover="setName('github')" onmouseleave="onIconExit()" src="/resources/images/icons/png/social/GitHubIcon.png" style="width: 40px;">
                     </a>
-                    <a class="icons" href="http://steamcommunity.com/id/johhnyhax/">
+                    <a class="icons" href="http://steamcommunity.com/id/zxvnme/">
                         <img onmouseover="setName('steam')" onmouseleave="onIconExit()" src="/resources/images/icons/png/social/SteamIcon.png" style="width: 40px;">
                     </a>
                     <a class="icons" href="https://discord.gg/xG6JtYd">
