📱 Changed mobile page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 location.href = "mobile.html";
             }
         }
+
     </script>
 
 </head>
@@ -73,7 +74,7 @@
                     <h3 style="padding-left: 6px;">~my projects</h3>
                     <dl class="tabcontentlistfont">
                         <dt>voltage</dt>
-                        <dd style="padding-left: 16px;">Discord management app <span class="label label-success">node.js</span>  <span class="label label-primary">electron</span></dd>
+                        <dd style="padding-left: 16px;">Discord management app <span class="label label-success">node.js</span> <span class="label label-primary">electron</span></dd>
                         <dt>cuteproxy</dt>
                         <dd style="padding-left: 16px;">Minecraft penetration testing proxy server <span class="label label-default">java</span></dd>
                     </dl>
@@ -93,19 +94,21 @@
 
                 <div id="social" class="tab-pane fade">
                     <h3 style="margin-left: 6px;">~social<small id="actuallink" style="margin-left: 6px">links</small></h3>
+                    <div class="icons">
+                        <a class="icon" href="https://github.com/zxvnme">
+                            <img onmouseover="setName('github')" onmouseleave="onIconExit()" src="/resources/images/icons/png/social/GitHubIcon.png" style="width: 40px;">
+                        </a>
+                        <a class="icon" href="http://steamcommunity.com/id/zxvnme/">
+                            <img onmouseover="setName('steam')" onmouseleave="onIconExit()" src="/resources/images/icons/png/social/SteamIcon.png" style="width: 40px;">
+                        </a>
+                        <a class="icon" href="https://discord.gg/xG6JtYd">
+                            <img onmouseover="setName('discord')" onmouseleave="onIconExit()" src="/resources/images/icons/png/social/DiscordIcon.png" style="width: 40px;">
+                        </a>
+                        <a class="icon" href="https://www.youtube.com/channel/UCRv6khDEPWgTNFU4mhI1wrA">
+                            <img onmouseover="setName('youtube')" onmouseleave="onIconExit()" src="/resources/images/icons/png/social/YoutubeIcon.png" style="width: 40px;">
+                        </a>
+                    </div>
 
-                    <a class="icons" href="https://github.com/zxvnme">
-                        <img onmouseover="setName('github')" onmouseleave="onIconExit()" src="/resources/images/icons/png/social/GitHubIcon.png" style="width: 40px;">
-                    </a>
-                    <a class="icons" href="http://steamcommunity.com/id/zxvnme/">
-                        <img onmouseover="setName('steam')" onmouseleave="onIconExit()" src="/resources/images/icons/png/social/SteamIcon.png" style="width: 40px;">
-                    </a>
-                    <a class="icons" href="https://discord.gg/xG6JtYd">
-                        <img onmouseover="setName('discord')" onmouseleave="onIconExit()" src="/resources/images/icons/png/social/DiscordIcon.png" style="width: 40px;">
-                    </a>
-                    <a class="icons" href="https://www.youtube.com/channel/UCRv6khDEPWgTNFU4mhI1wrA">
-                        <img onmouseover="setName('youtube')" onmouseleave="onIconExit()" src="/resources/images/icons/png/social/YoutubeIcon.png" style="width: 40px;">
-                    </a>
 
                 </div>
 
