--- a/mobile.html
+++ b/mobile.html
@@ -13,5 +13,5 @@
 </head>
 
 <body style="font-family: 'Open Sans', sans-serif;">
-        <h3 class="center2">This website doesn't support mobile browsers.</h3>
+        <h3 class="center2" style="text-align: center;">This website doesn't support mobile browsers :(</h3>
 </body>
