📚 Theme changes part (2 of 3)
- Added particles to mobile.html.
- Changed major site colors.
- Renamed some files.

--- a/mobile.html
+++ b/mobile.html
@@ -14,5 +14,11 @@
 </head>
 
 <body style="font-family: 'Open Sans', sans-serif;">
+    
+    <script src="/resources/libraries/js/particles.js"></script>
+    <script src="/resources/js/mobile.js"></script>
+    
+    <div id="particles-js">
         <h3 class="center2" style="text-align: center;">This website doesn't support mobile browsers :(</h3>
+    </div>
 </body>
