📚 Theme changes part (3 of 3)
- Changed docs tab contet.
- Added separated css style for hyperlinks.
- Set window opacity to 90%.
- Removed ";d" text emote. (idk how it has got in there)
Last commit from Theme changes series 🎉.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
     <div id="particles-js">
-        <div class="center" style="background-color: #212121; border: solid; border-width: 1px; border-color: black; border-radius: 8px; width: 560px; height: 350px;">
+        <div class="center" style="background-color: #212121; border: solid; border-width: 1px; border-color: black; border-radius: 8px; width: 560px; height: 350px; opacity: 0.90;">
 
             <nav class="navbar navbar-inverse">
 
@@ -73,7 +73,7 @@
                     </p>
                     <br>
                     <p class="tabcontentfont" style="margin-left: 8px;">
-                        website sourcecode available on <a class="hyperlink" href="https://www.github.com/zxvnme/zxvnme.github.io">github</a> ;d
+                        website sourcecode available on <a class="hyperlink" href="https://www.github.com/zxvnme/zxvnme.github.io">github</a>
                     </p>
                 </div>
 
@@ -94,7 +94,7 @@
                 <div id="docs" class="tab-pane fade">
                     <h3 style="padding-left: 6px;">~documenation</h3>
                     <div class="center2" style="top: 75% !important">
-                        <a style="padding-left: 6px;" type="button" data-toggle="tooltip" class="btn btn-default disabled" href="docs.html">click here to show docs page</a>
+                        <a style="padding-left: 6px;" class="hyperlink" href="docs.html">click here to show docs page</a>
                     </div>
                 </div>
 
