--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         my name's Igor (zxvnme), im medium-level programmer with big aspirations
                     </p>
                     <p class="tabcontentfont" style="margin-left: 8px;">
-                        i spend really much time on learning and developing my programming skills
+                        i spend a lot of time on learning and developing my programming skills
                     </p>
                     <p class="tabcontentfont" style="margin-left: 8px;">
                         feel free to <a class="hyperlink" data-toggle="tab" href="#social">contact</a> me, i usually dont bite
