📜 Main window resize, changes in backend
- Resized main div size from 560x350 to 720x420.
- Added icons to navigation bar.
- Added meta tags.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
     <title>~zxvnme</title>
     <!-- Metas -->
-    <meta charset="utf-8" />
-    <!-- Author info -->
+    <meta charset="UTF-8">
     <meta name="author" content="zxvnme">
+    <meta name="description" content="zxvnme portfolio site">
+    <meta name="keywords" content="zxvnme,johhnyhax,jvm">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -39,23 +40,23 @@
 </head>
 
 <body style="background-color: #2a2a2a; font-family: 'Open Sans', sans-serif; text-shadow: 1px 1px black; color: #757575" onload="initialization();">
-    
+
     <!-- Particles js https://github.com/VincentGarreau/particles.js/ -->
     <script src="/resources/libraries/js/particles.js"></script>
     <script src="/resources/js/index.js"></script>
 
 
     <div id="particles-js">
-        <div class="center" style="background-color: #212121; border: solid; border-width: 1px; border-color: black; border-radius: 8px; width: 560px; height: 350px; opacity: 0.90;">
+        <div class="center" style="background-color: #212121; border: solid; border-width: 1px; border-color: black; border-radius: 8px; width: 720px; height: 420px; opacity: 0.90;">
 
             <nav class="navbar navbar-inverse">
 
                 <ul class="nav navbar-nav">
-                    <li><a data-toggle="tab" href="#about">about</a></li>
-                    <li><a data-toggle="tab" href="#projects">projects</a></li>
-                    <li><a data-toggle="tab" href="#docs">docs</a></li>
-                    <li><a data-toggle="tab" href="#downloadables">downloadables</a></li>
-                    <li><a data-toggle="tab" href="#social">social</a></li>
+                    <li><a data-toggle="tab" href="#about"><i class="glyphicon glyphicon-pushpin"></i> about</a></li>
+                    <li><a data-toggle="tab" href="#projects"><i class="glyphicon glyphicon-education"></i> projects</a></li>
+                    <li><a data-toggle="tab" href="#docs"><i class="glyphicon glyphicon-book"></i> docs</a></li>
+                    <li><a data-toggle="tab" href="#downloadables"><i class="glyphicon glyphicon-floppy-save"></i> downloadables</a></li>
+                    <li><a data-toggle="tab" href="#social"><i class="glyphicon glyphicon-star-empty"></i> social</a></li>
                 </ul>
             </nav>
 
@@ -100,7 +101,7 @@
 
                 <div id="downloadables" class="tab-pane fade">
                     <h3 style="margin-left: 6px;">~downloadable content</h3>
-                    <p style="padding-left: 6px;">oops, nothing's there (╯⚆ω⚆）╯︵ ┻━┻</p>
+                    <a class="hyperlink" style="margin-left: 6px;" href="https://github.com/zxvnme/crackerer/releases">crackerer</a> - simple steam api bruteforce-like application that allows you to fast check for steam urls.
                 </div>
 
                 <div id="social" class="tab-pane fade">
