--- a/mobile.html
+++ b/mobile.html
@@ -8,9 +8,17 @@
                                                        -->
 
 <head>
+    <title>~mobile</title>
+    <!-- Metas -->
+    <meta charset="UTF-8">
+    <meta name="author" content="zxvnme">
+    <meta name="description" content="zxvnme portfolio site">
+    <meta name="keywords" content="zxvnme,johhnyhax,jvm">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="resources/css/styling.css">
-    <title>~mobile</title>
 </head>
 
 <body style="font-family: 'Open Sans', sans-serif;">
