--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta name="description" content="zxvnme portfolio site">
     <meta name="keywords" content="zxvnme,johhnyhax,jvm">
 
+    <link rel="shortcut icon" type="image/x-icon" href="resources/images/logos/z32-32.ico"/>
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
@@ -50,7 +52,6 @@
         <div class="center" style="background-color: #212121; border: solid; border-width: 1px; border-color: black; border-radius: 8px; width: 720px; height: 420px; opacity: 0.90;">
 
             <nav class="navbar navbar-inverse">
-
                 <ul class="nav navbar-nav">
                     <li><a data-toggle="tab" href="#about"><i class="glyphicon glyphicon-pushpin"></i> about</a></li>
                     <li><a data-toggle="tab" href="#projects"><i class="glyphicon glyphicon-education"></i> projects</a></li>
