--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@
         ... and most of all - node and java programmer.<br><br>
         programming is a hobby that gives me the biggest satisfaction thusly making my code optimized and realiable.<br><br>
 
-        if you have any questions, problems or business affairs - contact me through e-mail. i'll try to respond ASAP.
+        if you have any questions, problems or business affairs - contact me through e-mail. i'll do my best to respond ASAP.
       </p>
     </div>
 
   </div>
 
+  <h5 class="footer delayed animation fade-in-up">made with 💜 by zxvnme</h5>
+  
   <script src="/resources/js/particles-init.js"></script>
 
 </body>
