🔧 Fixed footer, made links clickable

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <head>
 
-  <title>~zxvnme</title>
+  <title>~ zxvnme</title>
   <link rel="icon" href="resources/images/logos/z64x64.ico">
 
   <!-- Metas -->
@@ -54,8 +54,8 @@
       <div class="delayed animation fade-in-up">
         <p>
           discord: zxvnme#2598<br>
-          zxvnme@protonmail.com<br>
-          github.com/zxvnme
+          <a href="mailto:zxvnme@protonmail.com">zxvnme@protonmail.com</a><br>
+          <a href="https://github.com/zxvnme">github.com/zxvnme</a>
         </p>
       </div>
 
@@ -75,7 +75,9 @@
 
   </div>
 
-  <h5 class="footer delayed animation fade-in-up">made with 💜 by zxvnme</h5>
+  <div class="footer delayed animation fade-in">
+    <p>made with 💜 by zxvnme</p>
+  </div>
   
   <script src="/resources/js/particles-init.js"></script>
 
