--- a/mobile.html
+++ b/mobile.html
@@ -8,19 +8,19 @@
                                                        -->
 
 <head>
-  <title>~mobile</title>
+  <title>~ mobile</title>
+  <link rel="icon" href="resources/images/logos/z64x64.ico">
   
   <!-- Metas -->
   <meta charset="UTF-8">
   <meta name="author" content="zxvnme">
   <meta name="description" content="zxvnme portfolio site">
-  <meta name="keywords" content="zxvnme,johhnyhax,jvm">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="zxvnme,Portfolio,GitHub">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Language" content="en">
 
-
-  <link rel="stylesheet" type="text/css" href="resources/css/styling.css">
 </head>
 
 <body style="font-family: 'Open Sans', sans-serif;">
-  <h3 class="center2" style="text-align: center;">This website doesn't support mobile browsers :(</h3>
+  <h3 style="text-align: center;">This website doesn't support mobile browsers :(</h3>
 </body>
