📜 Added theme-color meta

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   <!-- Metas -->
   <meta charset="UTF-8">
   <meta name="author" content="zxvnme">
+  <meta name="theme-color" content="#2a2a2a">
   <meta name="description" content="zxvnme portfolio site">
   <meta name="keywords" content="zxvnme,Portfolio,GitHub">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <meta http-equiv="Content-Language" content="en">
   
 
