--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <h2>~ about me:</h2>
       <p>
         hello friend, hello friend?<br><br>
-        im Igor. 16 yo teen, bmx rider, linux enthusiast, pixelart newbie<br>
-        ... and most of all - node and java programmer.<br><br>
+        im Igor. im 16 yo, im bmx rider, linux enthusiast, pixelart newbie<br>
+        ... and most of all - node and cpp programmer.<br><br>
         programming is a hobby that gives me the biggest satisfaction thusly making my code optimized and realiable.<br><br>
 
         if you have any questions, problems or business affairs - contact me through e-mail. i'll do my best to respond ASAP.
