--- a/index.html
+++ b/index.html
@@ -54,14 +54,16 @@
 
     <div class="hud content delayed animation fade-in">
       <h2>~ about me:</h2>
+      <p class="necessary">struct info {</p>
       <p>
         hello friend, hello friend?<br><br>
-        im Igor. im 16 yo, im bmx rider, linux enthusiast, pixelart newbie<br>
-        ... and most of all - node and cpp programmer.<br><br>
+        im Igor. im 16 yo, im bmx rider, linux enthusiast,<br>
+        pixelart newbie ... and most of all - node and cpp programmer.<br><br>
         programming is a hobby that gives me the biggest satisfaction thusly making my code optimized and realiable.<br><br>
 
         if you have any questions, problems or business affairs - contact me through e-mail. i'll do my best to respond ASAP.
       </p>
+      <p class="necessary">}</p>
     </div>
 
   </div>
