--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <head>
 
-  <title>~ zxvnme</title>
+  <title>xvnme</title>
   <link rel="icon" href="resources/images/logos/z64x64.ico">
 
   <!-- Metas -->
@@ -33,45 +33,44 @@
 
 <body class="all">
 
-  <canvas class="background"></canvas>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+  <div class="background">
 
-  <div class="center hud animation fade-in">
+    <div class="center hud animation fade-in">
 
-    <div class="hud panel">
+      <div class="hud panel">
 
-      <img class="delayed animation fade-in-down" src="resources/images/logos/z128x128-shadow.png">
+        <img class="delayed animation fade-in-down" src="resources/images/logos/z128x128-shadow.png">
 
-      <div class="delayed animation fade-in-up">
+        <div class="delayed animation fade-in-up">
+          <p>
+            discord: zxvnme#2598<br>
+            <a href="mailto:zxvnme@protonmail.com">zxvnme@protonmail.com</a><br>
+            <a href="https://github.com/zxvnme">github.com/zxvnme</a>
+          </p>
+        </div>
+
+      </div>
+
+      <div class="hud content delayed animation fade-in">
+        <h2>~ about me:</h2>
+        <p class="necessary">struct info {</p>
         <p>
-          discord: zxvnme#2598<br>
-          <a href="mailto:zxvnme@protonmail.com">zxvnme@protonmail.com</a><br>
-          <a href="https://github.com/zxvnme">github.com/zxvnme</a>
+          hello friend, hello friend?<br><br>
+          im Igor. im 16 yo, im bmx rider, linux enthusiast,<br>
+          pixelart newbie ... and most of all - node and cpp programmer.<br><br>
+          programming is a hobby that gives me the biggest satisfaction thusly making my code optimized and realiable.<br><br>
+
+          if you have any questions, problems or business affairs - contact me through e-mail. i'll do my best to respond ASAP.
         </p>
+        <p class="necessary">}</p>
       </div>
 
     </div>
 
-    <div class="hud content delayed animation fade-in">
-      <h2>~ about me:</h2>
-      <p class="necessary">struct info {</p>
-      <p>
-        hello friend, hello friend?<br><br>
-        im Igor. im 16 yo, im bmx rider, linux enthusiast,<br>
-        pixelart newbie ... and most of all - node and cpp programmer.<br><br>
-        programming is a hobby that gives me the biggest satisfaction thusly making my code optimized and realiable.<br><br>
-
-        if you have any questions, problems or business affairs - contact me through e-mail. i'll do my best to respond ASAP.
-      </p>
-      <p class="necessary">}</p>
+    <div class="footer delayed animation fade-in">
+      <p>made with 💜 by zxvnme</p>
     </div>
 
   </div>
-
-  <div class="footer delayed animation fade-in">
-    <p>made with 💜 by zxvnme</p>
-  </div>
-
-  <script src="/resources/js/particles-init.js"></script>
 
 </body>
