Set language the proper way

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
                               do not remove this, thanks.
                                                        -->
-
+<html lang="en">
 <head>
 
   <title>xvnme</title>
@@ -19,8 +19,6 @@
   <meta name="description" content="zxvnme portfolio site">
   <meta name="keywords" content="zxvnme,Portfolio,GitHub">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta http-equiv="Content-Language" content="en">
 
 
   <!-- Imports -->
